[package]
name = "fakes-gen"
version = "0.1.0"
authors = ["ogata-k <ogtkzk712@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.2"
chrono = "0.4.9"
num-traits = "0.2"
failure = "0.1.6"