[package]
name = "fakes-gen"
version = "0.1.0"
authors = ["ogata-k <ogtkzk712@gmail.com>"]
description = "This CLI tool is generate dummys whose option you specified.\nYou can also specify formatter for csv, tsv and json.\nThis program support multi-locale. When not support your locale and you want your locale faker, please pull-request your locale dummy data at https://github.com/ogata-k/fakes-gen-cli/pulls."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.2"
chrono = "0.4.9"
num-traits = "0.2"
failure = "0.1.6"