[package]
name = "fakes-gen"
version = "0.2.0"
authors = ["ogata-k <ogtkzk712@gmail.com>"]
license = "MIT"
description = "This CLI tool is generate dummys whose option you specified.\nYou can also specify formatter for csv, tsv and json.\nThis program support multi-locale. When not support your locale and you want your locale faker, please pull-request your locale dummy data at https://github.com/ogata-k/fakes-gen-cli/pulls."
edition = "2018"
repository = "https://github.com/ogata-k/fakes-gen-cli/tree/master"
readme = "README.md"
keywords = ["cli", "data", "faker", "generator"]
categories = ["command-line-interface",   "command-line-utilities",   "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
rand = "0.7.2"
regex = "1.3.1"
chrono = "0.4.9"
num-traits = "0.2"
failure = "0.1.6"